--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "navidad-en-la-mesa",
   "private": true,
@@ -11,8 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "lucide-react": "^0.344.0",
-    "@google/genai": "*"
+    "lucide-react": "^0.344.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
