--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "lucide-react": "^0.344.0"
+    "lucide-react": "^0.344.0",
+    "@google/genai": "^1.34.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
