--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,13 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
       "*": ["node_modules/*"]
     }
   },
-  "include": ["."],
-  "exclude": ["node_modules", "dist"]
+  "include": ["index.tsx", "App.tsx", "types.ts", "data.ts", "services/**/*.ts"],
+  "exclude": ["node_modules", "dist", "src"]
 }
